fix(subscribe-block): remove horizontal scroll

--- a/src/blocks/subscribe/style.scss
+++ b/src/blocks/subscribe/style.scss
@@ -21,6 +21,9 @@
 		@media ( min-width: 782px ) {
 			margin-right: 1rem;
 		}
+		&[aria-hidden='true'] {
+			width: 0;
+		}
 	}
 	input[type='submit'] {
 		background-color: #d33;
